# MIPS_pipeline

./: CMakeLists.txt  README.md
cmake/: macros.cmake  test_macros.cmake
doc/: mipssingle.vhd
src/: .gitignore  CMakeLists.txt  ghdl_run_tests.sh  make_monolithic.sh  mips.vhd  top.vhd
src/asm/: memfile.asm
src/components/: CMakeLists.txt  adder.vhd  alu.vhd  flopr.vhd  mux2.vhd  mux4.vhd  reg_n.vhd  regfile.vhd  signext.vhd  sl2.vhd
src/control_dp/: CMakeLists.txt  aludec.vhd  controller.vhd  datapath.vhd  maindec.vhd
src/memories/: CMakeLists.txt  dmem.vhd  imem.vhd
src/pipeline/: CMakeLists.txt  hazard_unit.vhd  regD.vhd  regE.vhd  regF.vhd  regM.vhd  regW.vhd
src/quartus/: MIPS.qpf  top.qsf
src/quartus/db/: prev_cmp_MIPS.qmsg  top.(0).cnf.cdb  top.(0).cnf.hdb  top.(1).cnf.cdb  top.(1).cnf.hdb  top.(10).cnf.cdb  top.(10).cnf.hdb  top.(11).cnf.cdb  top.(11).cnf.hdb  top.(12).cnf.cdb  top.(12).cnf.hdb  top.(13).cnf.cdb  top.(13).cnf.hdb  top.(14).cnf.cdb  top.(14).cnf.hdb  top.(2).cnf.cdb  top.(2).cnf.hdb  top.(3).cnf.cdb  top.(3).cnf.hdb  top.(4).cnf.cdb  top.(4).cnf.hdb  top.(5).cnf.cdb  top.(5).cnf.hdb  top.(6).cnf.cdb  top.(6).cnf.hdb  top.(7).cnf.cdb  top.(7).cnf.hdb  top.(8).cnf.cdb  top.(8).cnf.hdb  top.(9).cnf.cdb  top.(9).cnf.hdb  top.asm.qmsg  top.asm.rdb  top.cmp.bpm  (+40 more)
test/: CMakeLists.txt  top_final_tb.vhd  top_jump_tb.vhd  top_tb.vhd  top_tb_final.vhd  top_tb_jump.vhd
test/asm/: test2.asm  top_final_tb.asm  top_jump_tb.asm  top_tb.asm  top_tb_jump.asm
test/binaries/: CMakeLists.txt
test/mips_single/: CMakeLists.txt  top_tb.vhd
(+30 files in other folders)
